# debian-repository

./: README.md  debian-repository.cabal
Distribution/Debian/Repository/: PackagesIndex.hs
playground/: Main.hs
playground/Distribution/Debian/Repository/Playground/: Main.hs
src/Distribution/Debian/: Repository.hs
src/Distribution/Debian/Repository/: Backend.hs  Conduit.hs  Package.hs  PackagesIndex.hs  Parse.hs  ReleaseFile.hs
tests/: Main.hs
tests/Distribution/Debian/Repository/: TestHelpers.hs
tests/Distribution/Debian/Repository/PackagesIndex/: Tests.hs
