name:                debian-repository
version:             0.1
author:              Anton Dessiatov
category:            Distribution
build-type:          Simple
cabal-version:       >=1.16

library
  default-language: Haskell2010
  hs-source-dirs:      src
  exposed-modules:
    Distribution.Debian.Repository
    Distribution.Debian.Repository.PackagesIndex
  build-depends:
      attoparsec
    , base
    , bytestring
    , containers
    , lens
    , text

test-suite test-debian-repository
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
    Distribution.Debian.Repository.PackagesIndex.Tests
    Distribution.Debian.Repository.TestHelpers
  build-depends:
      base
    , bytestring
    , containers
    , debian-repository
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
    , QuickCheck
  ghc-options: -threaded
  default-language: Haskell2010
