name:                debian-repository
version:             0.1
author:              Anton Dessiatov
category:            Distribution
build-type:          Simple
cabal-version:       >=1.16

library
  default-language: Haskell2010
  hs-source-dirs:      src
  exposed-modules:
    Distribution.Debian.Repository
    Distribution.Debian.Repository.Backend
    Distribution.Debian.Repository.Conduit
    Distribution.Debian.Repository.Package
    Distribution.Debian.Repository.PackagesIndex
    Distribution.Debian.Repository.ReleaseFile
  other-modules:
    Distribution.Debian.Repository.Parse
  build-depends:
      attoparsec
    , base
    , bytestring
    , conduit
    , conduit-extra
    , containers
    , enclosed-exceptions
    , exceptions
    , lens
    , monad-control
    , monad-logger
    , primitive
    , http-conduit
    , http-types
    , resourcet
    , text
    , transformers
    , transformers-base

test-suite test-debian-repository
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
    Distribution.Debian.Repository.PackagesIndex.Tests
    Distribution.Debian.Repository.TestHelpers
  build-depends:
      base
    , bytestring
    , containers
    , debian-repository
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
    , QuickCheck
  ghc-options: -threaded
  default-language: Haskell2010

executable debian-repository-playground
  hs-source-dirs: playground
  main-is: Main.hs
  other-modules:
    Distribution.Debian.Repository.Playground.Main
  build-depends:
      base
    , debian-repository
    , monad-logger
    , transformers
  ghc-options: -threaded
  default-language: Haskell2010
